Add GitHub link

--- a/File/index.html
+++ b/File/index.html
@@ -151,6 +151,12 @@
  </tr>
  <tr>
   <td width="200"><center><input type="button"
+   value="GitHub PLJ541"
+   onclick="handleChoice('GitHub PLJ541', 
+   'https://github.com/plj541/',
+   '', '')">
+  </center></td>
+  <td width="200"><center><input type="button"
    value="John Hancock & Signatore"
    onclick="handleChoice('John Hancock & Signatore', 
    'https://www2.mainaccount.com/jhfn/Login.html',
@@ -168,14 +174,14 @@
    'https://www.aarpmedicareplans.com/aarp-members/sign-in',
    'plj541@gmail.com', 'bfj636@gmail.com')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center><input type="button"
    value="OptumRX"
    onclick="handleChoice('OptumRX', 
    'https://www.optumrx.com/RxSolWeb/mvc/home.do',
    'PaulLJackson', 'BarbaraFJackson')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center><input type="button"
    value="PBE Secure eMail"
    onclick="handleChoice('PBE Secure eMail', 
@@ -194,14 +200,14 @@
    'https://www.jcpenney.com/',
    'plj541@gmail.com', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center><input type="button"
    value="Santa Clara Taxes"
    onclick="handleChoice('Santa Clara Taxes', 
    'https://www.sccassessor.org/index.php/online-services/email-opt-in/manage-your-account',
    'plj541@gmail.com', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center><input type="button"
    value="Stanford MyHealth"
    onclick="handleChoice('Stanford MyHealth', 
@@ -220,12 +226,17 @@
    'http://target.com/rcam/',
    '', 'BarbaraFJackson')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center><input type="button"
    value="VerizonCell Phones"
    onclick="handleChoice('VerizonCell Phones', 
    'https://login.verizonwireless.com/amserver/UI/Login',
    'PaulLJackson', '')">
   </center></td>
+  <td width="200"><center>  </center></td>
+  <td width="200"><center>  </center></td>
+  <td width="200"><center>  </center></td>
  </tr>
  <tr>
   <td width="200"><center><div style="background-color:LemonChiffon">¡Know</div>  </center></td>
