--- a/File/index.html
+++ b/File/index.html
@@ -157,6 +157,12 @@
    '', '')">
   </center></td>
   <td width="200"><center><input type="button"
+   value="Jackson.Com"
+   onclick="handleChoice('Jackson.Com', 
+   'https://www.jackson.com/',
+   'PaulJackson541', '')">
+  </center></td>
+  <td width="200"><center><input type="button"
    value="John Hancock & Signatore"
    onclick="handleChoice('John Hancock & Signatore', 
    'https://www2.mainaccount.com/jhfn/Login.html',
@@ -168,14 +174,14 @@
    'http://www.linkedin.com/manageGroupMembers?dispParts=&gid=132770&memberLevel=MEMBER',
    'paul.l.jackson@comcast.net', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center><input type="button"
    value="Medicare Rx AARP"
    onclick="handleChoice('Medicare Rx AARP', 
    'https://www.aarpmedicareplans.com/aarp-members/sign-in',
    'plj541@gmail.com', 'bfj636@gmail.com')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center><input type="button"
    value="OptumRX"
    onclick="handleChoice('OptumRX', 
@@ -194,14 +200,14 @@
    'https://www.pge.com/',
    'plj541@gmail.com', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center><input type="button"
    value="JCPenney"
    onclick="handleChoice('JCPenney', 
    'https://www.jcpenney.com/',
    'plj541@gmail.com', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center><input type="button"
    value="Santa Clara Taxes"
    onclick="handleChoice('Santa Clara Taxes', 
@@ -220,21 +226,20 @@
    'http://www.statefarm.com/',
    'plj541', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center><input type="button"
    value="Target Red Card"
    onclick="handleChoice('Target Red Card', 
    'http://target.com/rcam/',
    '', 'BarbaraFJackson')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center><input type="button"
    value="VerizonCell Phones"
    onclick="handleChoice('VerizonCell Phones', 
    'https://login.verizonwireless.com/amserver/UI/Login',
    'PaulLJackson', '')">
   </center></td>
-  <td width="200"><center>  </center></td>
   <td width="200"><center>  </center></td>
   <td width="200"><center>  </center></td>
  </tr>
