Minor name change

--- a/File/index.html
+++ b/File/index.html
@@ -295,8 +295,8 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
-    value="MediCare.Gov"
-    onclick="handleChoice('MediCare.Gov', 
+    value="MeDiCare.Gov"
+    onclick="handleChoice('MeDiCare.Gov', 
     'https://www.mymedicare.gov/',
     'plj541@gmail.com', 'BARBARAFJACKSON')">
   </center></td>
