--- a/File/index.html
+++ b/File/index.html
@@ -134,6 +134,13 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="Twitter"
+    onclick="handleChoice('Twitter', 
+    'https://twitter.com/',
+    'plj541@gmail.com', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="UpToUs"
     onclick="handleChoice('UpToUs', 
     'http://www.uptous.com/',
@@ -146,7 +153,6 @@
     'http://www.yahoo.com/',
     'plj541', '')">
   </center></td>
-  <td width="200"></td>
  </tr>
  <tr>
   <td width="200"><center>
@@ -254,7 +260,7 @@
     value="Stanford MyHealth"
     onclick="handleChoice('Stanford MyHealth', 
     'https://myhealth.stanfordmedicine.org/',
-    'paul.l.jackson@comcast.net', '')">
+    'paul.l.jackson@comcast.net', 'rajackson822@gmail.com')">
   </center></td>
   <td width="200"><center>
    <input type="button"
