--- a/File/index.html
+++ b/File/index.html
@@ -44,6 +44,13 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="DMV"
+    onclick="handleChoice('DMV', 
+    'http://www.dmv.ca.gov/',
+    'PaulLJackson', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="FaceBook"
     onclick="handleChoice('FaceBook', 
     'http://www.facebook.com/',
@@ -56,6 +63,8 @@
     'http://www.gocomics.com/',
     'PLJ541', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Medscape"
@@ -63,8 +72,6 @@
     'http://www.medscape.com/',
     'PaulLJackson', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="NARS"
@@ -86,6 +93,8 @@
     'https://cluborchard.osh.com/',
     'plj541@gmail.com', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="JCPenney"
@@ -93,8 +102,6 @@
     'https://www.jcprewards.com/Index.aspx',
     'paul.l.jackson@comcast.net', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="RedBox"
@@ -116,6 +123,8 @@
     'https://www.samsung.com/us/support/account/',
     'plj541@gmail.com', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="SIIG VHS Transfer"
@@ -123,8 +132,6 @@
     'https://www.siig.com/customer/account/',
     'plj541@gmail.com', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Tumblr"
@@ -146,6 +153,8 @@
     'http://www.uptous.com/',
     'plj541@gmail.com', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Yahoo"
@@ -153,6 +162,9 @@
     'http://www.yahoo.com/',
     'plj541', '')">
   </center></td>
+  <td width="200"></td>
+  <td width="200"></td>
+  <td width="200"></td>
  </tr>
  <tr>
   <td width="200"><center>
@@ -257,11 +269,20 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="Sleep Med"
+    onclick="handleChoice('Sleep Med', 
+    'https://www.myresupply.com/SleepMedInc',
+    'plj541@gmail.com', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="Stanford MyHealth"
     onclick="handleChoice('Stanford MyHealth', 
     'https://myhealth.stanfordmedicine.org/',
     'paul.l.jackson@comcast.net', 'rajackson822@gmail.com')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="State Farm Insurance"
@@ -269,8 +290,6 @@
     'http://www.statefarm.com/',
     'plj541', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Target Red Card"
@@ -285,7 +304,6 @@
     'https://login.verizonwireless.com/amserver/UI/Login',
     'PaulLJackson', '')">
   </center></td>
-  <td width="200"></td>
   <td width="200"></td>
  </tr>
  <tr>
