--- a/File/index.html
+++ b/File/index.html
@@ -47,7 +47,7 @@
     value="FaceBook"
     onclick="handleChoice('FaceBook', 
     'http://www.facebook.com/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', 'bfj22@comcast.net')">
   </center></td>
   <td width="200"><center>
    <input type="button"
@@ -313,8 +313,8 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
-    value="MeDiCare.Gov"
-    onclick="handleChoice('MeDiCare.Gov', 
+    value="MedIcaRe.Gov"
+    onclick="handleChoice('MedIcaRe.Gov', 
     'https://www.mymedicare.gov/',
     'plj541@gmail.com', 'BARBARAFJACKSON')">
   </center></td>
