--- a/File/index.html
+++ b/File/index.html
@@ -51,11 +51,20 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="GitHub PLJ541"
+    onclick="handleChoice('GitHub PLJ541', 
+    'https://github.com/plj541/',
+    '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="Go Comics"
     onclick="handleChoice('Go Comics', 
     'http://www.gocomics.com/',
     'PLJ541', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Medscape"
@@ -63,8 +72,6 @@
     'http://www.medscape.com/',
     'PaulLJackson', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="NARS"
@@ -86,6 +93,8 @@
     'https://cluborchard.osh.com/',
     'plj541@gmail.com', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="JCPenney"
@@ -93,8 +102,6 @@
     'https://www.jcprewards.com/Index.aspx',
     'paul.l.jackson@comcast.net', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="RedBox"
@@ -116,6 +123,8 @@
     'https://www.samsung.com/us/support/account/',
     'plj541@gmail.com', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="SIIG VHS Transfer"
@@ -123,8 +132,6 @@
     'https://www.siig.com/customer/account/',
     'plj541@gmail.com', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Tumblr"
@@ -146,6 +153,8 @@
     'http://www.uptous.com/',
     'plj541@gmail.com', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Yahoo"
@@ -153,6 +162,9 @@
     'http://www.yahoo.com/',
     'plj541', '')">
   </center></td>
+  <td width="200"></td>
+  <td width="200"></td>
+  <td width="200"></td>
  </tr>
  <tr>
   <td width="200"><center>
@@ -190,13 +202,6 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
-    value="GitHub PLJ541"
-    onclick="handleChoice('GitHub PLJ541', 
-    'https://github.com/plj541/',
-    '', '')">
-  </center></td>
-  <td width="200"><center>
-   <input type="button"
     value="Jackson.Com"
     onclick="handleChoice('Jackson.Com', 
     'https://www.jackson.com/',
@@ -209,8 +214,6 @@
     'https://www2.mainaccount.com/jhfn/Login.html',
     'pjackson', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="LinkedIn"
@@ -218,6 +221,8 @@
     'http://www.linkedin.com/manageGroupMembers?dispParts=&gid=132770&memberLevel=MEMBER',
     'paul.l.jackson@comcast.net', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Medicare Rx AARP"
@@ -239,8 +244,6 @@
     'https://securemail5.messagelabs.com/login.html',
     'plj541@gmail.com', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="PG&E"
@@ -248,6 +251,8 @@
     'https://www.pge.com/',
     'plj541@gmail.com', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="JCPenney"
@@ -269,8 +274,6 @@
     'https://www.myresupply.com/SleepMedInc',
     'plj541@gmail.com', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Stanford MyHealth"
@@ -278,6 +281,8 @@
     'https://myhealth.stanfordmedicine.org/',
     'paul.l.jackson@comcast.net', 'rajackson822@gmail.com')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="State Farm Insurance"
@@ -299,6 +304,7 @@
     'https://login.verizonwireless.com/amserver/UI/Login',
     'PaulLJackson', '')">
   </center></td>
+  <td width="200"></td>
  </tr>
  <tr>
   <td width="200"><center>
