--- a/File/index.html
+++ b/File/index.html
@@ -157,8 +157,8 @@
  <tr>
   <td width="200"><center>
    <input type="button"
-    value="Yahoo"
-    onclick="handleChoice('Yahoo', 
+    value="YaHoo"
+    onclick="handleChoice('YaHoo', 
     'http://www.yahoo.com/',
     'plj541', '')">
   </center></td>
