--- a/File/index.html
+++ b/File/index.html
@@ -5,7 +5,8 @@
 </head>
 
 <body onload="handleLoad(formLinks.buttonLink,
-  formLinks.textPLJ, formLinks.textBFJ)">
+  formLinks.textPLJ, formLinks.textBFJ,
+  formLinks.textKRJ, formLinks.textRAJ)">
  <form name="formLinks" action="">
  <table border="1" cellspacing="3" cellpadding="0">
  <tr>
@@ -17,21 +18,21 @@
     value="ACER"
     onclick="handleChoice('ACER', 
     'http://us.acer.com/ac/en/US/content/support/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="ACM"
     onclick="handleChoice('ACM', 
     'http://myacm.acm.org/',
-    'pauljackson2', '')">
+    'pauljackson2', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Ancestry"
     onclick="handleChoice('Ancestry', 
     'http://www.ancestry.com/',
-    'plj541', '')">
+    'plj541', '', '', '')">
   </center></td>
  </tr>
  <tr>
@@ -40,28 +41,28 @@
     value="DMV"
     onclick="handleChoice('DMV', 
     'http://www.dmv.ca.gov/',
-    'PaulLJackson', '')">
+    'PaulLJackson', '', '', 'RobAJackson')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="FaceBook"
     onclick="handleChoice('FaceBook', 
     'http://www.facebook.com/',
-    'plj541@gmail.com', 'bfj22@comcast.net')">
+    'plj541@gmail.com', 'bfj22@comcast.net', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="GitHub PLJ541"
     onclick="handleChoice('GitHub PLJ541', 
     'https://github.com/plj541/',
-    '', '')">
+    '', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Go Comics"
     onclick="handleChoice('Go Comics', 
     'http://www.gocomics.com/',
-    'PLJ541', '')">
+    'PLJ541', '', '', '')">
   </center></td>
  </tr>
  <tr>
@@ -70,28 +71,28 @@
     value="Medscape"
     onclick="handleChoice('Medscape', 
     'http://www.medscape.com/',
-    'PaulLJackson', '')">
+    'PaulLJackson', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="NARS"
     onclick="handleChoice('NARS', 
     'http://www.nars2000.org/',
-    'PaulJackson', '')">
+    'PaulJackson', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="NextDoor"
     onclick="handleChoice('NextDoor', 
     'https://rexmanor.nextdoor.com/login/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="OSH"
     onclick="handleChoice('OSH', 
     'https://cluborchard.osh.com/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
  </tr>
  <tr>
@@ -100,28 +101,28 @@
     value="JCPenney"
     onclick="handleChoice('JCPenney', 
     'https://www.jcprewards.com/Index.aspx',
-    'paul.l.jackson@comcast.net', '')">
+    'paul.l.jackson@comcast.net', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="RedBox"
     onclick="handleChoice('RedBox', 
     'http://www.redbox.com/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Safeway Coupons"
     onclick="handleChoice('Safeway Coupons', 
     'https://auth.safeway.com/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="SamSung Account"
     onclick="handleChoice('SamSung Account', 
     'https://www.samsung.com/us/support/account/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
  </tr>
  <tr>
@@ -130,28 +131,28 @@
     value="SIIG VHS Transfer"
     onclick="handleChoice('SIIG VHS Transfer', 
     'https://www.siig.com/customer/account/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Tumblr"
     onclick="handleChoice('Tumblr', 
     'http://www.tumblr.com/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Twitter"
     onclick="handleChoice('Twitter', 
     'https://twitter.com/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="UpToUs"
     onclick="handleChoice('UpToUs', 
     'http://www.uptous.com/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
  </tr>
  <tr>
@@ -160,7 +161,7 @@
     value="YaHoo"
     onclick="handleChoice('YaHoo', 
     'http://www.yahoo.com/',
-    'plj541', '')">
+    'plj541', '', '', '')">
   </center></td>
   <td width="200"></td>
   <td width="200"></td>
@@ -175,21 +176,21 @@
     value="Amazon Shopping Cart"
     onclick="handleChoice('Amazon Shopping Cart', 
     'http://www.amazon.com/',
-    'plj11@comcast.net', '')">
+    'plj11@comcast.net', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Best Buy"
     onclick="handleChoice('Best Buy', 
     'https://myrewardzone.bestbuy.com/',
-    'plj541@gmail.com', '2661511789')">
+    'plj541@gmail.com', '2661511789', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Blue Shield CA"
     onclick="handleChoice('Blue Shield CA', 
     'https://www.blueshieldca.com/',
-    'RobertAJackson', 'KayteRJackson')">
+    '', '', 'RobertAJackson', 'KayteRJackson')">
   </center></td>
  </tr>
  <tr>
@@ -198,28 +199,28 @@
     value="Franchise Tax Board"
     onclick="handleChoice('Franchise Tax Board', 
     'https://ftb.ca.gov/',
-    'PaulLJackson541', '')">
+    'PaulLJackson541', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Jackson.Com"
     onclick="handleChoice('Jackson.Com', 
     'https://www.jackson.com/',
-    'PaulJackson541', '')">
+    'PaulJackson541', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="John Hancock & Signatore"
     onclick="handleChoice('John Hancock & Signatore', 
     'https://www2.mainaccount.com/jhfn/Login.html',
-    'pjackson', '')">
+    'pjackson', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="LinkedIn"
     onclick="handleChoice('LinkedIn', 
     'http://www.linkedin.com/manageGroupMembers?dispParts=&gid=132770&memberLevel=MEMBER',
-    'paul.l.jackson@comcast.net', '')">
+    'paul.l.jackson@comcast.net', '', '', '')">
   </center></td>
  </tr>
  <tr>
@@ -228,28 +229,28 @@
     value="Medicare Rx AARP"
     onclick="handleChoice('Medicare Rx AARP', 
     'https://www.aarpmedicareplans.com/aarp-members/sign-in',
-    'plj541@gmail.com', 'bfj636@gmail.com')">
+    'plj541@gmail.com', 'bfj636@gmail.com', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="OptumRX"
     onclick="handleChoice('OptumRX', 
     'https://www.optumrx.com/RxSolWeb/mvc/home.do',
-    'PaulLJackson', 'BarbaraFJackson')">
+    'PaulLJackson', 'BarbaraFJackson', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="PBE Secure eMail"
     onclick="handleChoice('PBE Secure eMail', 
     'https://securemail5.messagelabs.com/login.html',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="PG&E"
     onclick="handleChoice('PG&E', 
     'https://www.pge.com/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
  </tr>
  <tr>
@@ -258,28 +259,28 @@
     value="JCPenney"
     onclick="handleChoice('JCPenney', 
     'https://www.jcpenney.com/',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Santa Clara Taxes"
     onclick="handleChoice('Santa Clara Taxes', 
     'https://www.sccassessor.org/index.php/online-services/email-opt-in/manage-your-account',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Sleep Med"
     onclick="handleChoice('Sleep Med', 
     'https://www.myresupply.com/SleepMedInc',
-    'plj541@gmail.com', '')">
+    'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Stanford MyHealth"
     onclick="handleChoice('Stanford MyHealth', 
     'https://myhealth.stanfordmedicine.org/',
-    'paul.l.jackson@comcast.net', 'rajackson822@gmail.com')">
+    'paul.l.jackson@comcast.net', 'bfj22@comcast.net', '', 'rajackson822@gmail.com')">
   </center></td>
  </tr>
  <tr>
@@ -288,21 +289,21 @@
     value="State Farm Insurance"
     onclick="handleChoice('State Farm Insurance', 
     'http://www.statefarm.com/',
-    'plj541', '')">
+    'plj541', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Target Red Card"
     onclick="handleChoice('Target Red Card', 
     'http://target.com/rcam/',
-    '', 'BarbaraFJackson')">
+    '', 'BarbaraFJackson', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="VerizonCell Phones"
     onclick="handleChoice('VerizonCell Phones', 
     'https://login.verizonwireless.com/amserver/UI/Login',
-    'PaulLJackson', '')">
+    'PaulLJackson', '', '', '')">
   </center></td>
   <td width="200"></td>
  </tr>
@@ -315,21 +316,21 @@
     value="John Hancock Annuities"
     onclick="handleChoice('John Hancock Annuities', 
     'https://www.jhannuities.com/Marketing/default.aspx',
-    'PaulLJackson', '')">
+    'PaulLJackson', '', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="MedIcaRe.Gov"
     onclick="handleChoice('MedIcaRe.Gov', 
     'https://www.mymedicare.gov/',
-    'plj541@gmail.com', 'BARBARAFJACKSON')">
+    'plj541@gmail.com', 'BARBARAFJACKSON', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
     value="Social Security Admin"
     onclick="handleChoice('Social Security Admin', 
     'https://secure.ssa.gov/RIL',
-    'peaceLoveJoy', 'bootsFrederick')">
+    'peaceLoveJoy', 'bootsFrederick', '', '')">
   </center></td>
  </tr>
  <tr>
@@ -338,26 +339,42 @@
     value="Wells Fargo"
     onclick="handleChoice('Wells Fargo', 
     'https://online.wellsfargo.com/',
-    'jack50ntr41', '')">
+    'jack50ntr41', '', '', '')">
   </center></td>
   <td width="200"></td>
   <td width="200"></td>
   <td width="200"></td>
  </tr>
  <tr>
-  <td width="200"><center>
+  <td width="200"><center><br>
    <input type="Text" style="font-size:18px"
     name="textPLJ" size="5" value="     PLJ"
     onfocus="handleFocus(thisPLJ)" />
   </center></td>
-  <td width="200"><center>
+  <td width="200"><center><br>
    <input type="button" onclick="handleLink()"
-    name="buttonLink" value="Go to Home">
+    name="buttonLink" value=" T.B.D. ">
   </center></td>
-  <td width="200"><center>
+  <td width="200"><center><br>
    <input type="Text" style="font-size:18px"
     name="textBFJ" size="5" value="     BFJ"
     onfocus="handleFocus(thisBFJ)" />
+  </center></td>
+ </tr>
+ <tr>
+  <td width="200"><center><br>
+   <input type="Text" style="font-size:18px"
+    name="textKRJ" size="5" value="     KRJ"
+    onfocus="handleFocus(thisKRJ)" />
+  </center></td>
+  <td width="200"><center><br>
+   <input type="button" onclick="handleLink()"
+    name="buttonHome" value="Go to Home">
+  </center></td>
+  <td width="200"><center><br>
+   <input type="Text" style="font-size:18px"
+    name="textRAJ" size="5" value="     RAJ"
+    onfocus="handleFocus(thisRAJ)" />
   </center></td>
  </tr>
  </table></form>
