--- a/File/index.html
+++ b/File/index.html
@@ -38,6 +38,13 @@
  <tr>
   <td width="200"><center>
    <input type="button"
+    value="City Mtn View"
+    onclick="handleChoice('City Mtn View', 
+    'https://mountainview.waterinsight.com/',
+    'plj541@gmail.com', '', '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="DMV"
     onclick="handleChoice('DMV', 
     'http://www.dmv.ca.gov/',
@@ -57,6 +64,8 @@
     'https://github.com/plj541/',
     '', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Go Comics"
@@ -64,8 +73,6 @@
     'http://www.gocomics.com/',
     'PLJ541', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Medscape"
@@ -87,6 +94,8 @@
     'https://rexmanor.nextdoor.com/login/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="OSH"
@@ -94,8 +103,6 @@
     'https://cluborchard.osh.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="RedBox"
@@ -117,6 +124,8 @@
     'https://www.samsung.com/us/support/account/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="SIIG VHS Transfer"
@@ -124,8 +133,6 @@
     'https://www.siig.com/customer/account/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Tumblr"
@@ -147,6 +154,8 @@
     'http://www.uptous.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="YaHoo"
@@ -154,6 +163,9 @@
     'http://www.yahoo.com/',
     'plj541', '', '', '')">
   </center></td>
+  <td width="200"></td>
+  <td width="200"></td>
+  <td width="200"></td>
  </tr>
  <tr>
   <td width="200"><center>
@@ -328,7 +340,7 @@
     onfocus="handleFocus(thisPLJ)" />
   </center></td>
   <td width="200"><center><br>
-   <input type="button" onclick="handleLink(true)"
+   <input type="button" onclick="handleLink()"
     name="buttonLink" value=" T.B.D. ">
   </center></td>
   <td width="200"><center><br>
@@ -344,7 +356,7 @@
     onfocus="handleFocus(thisKRJ)" />
   </center></td>
   <td width="200"><center><br>
-   <input type="button" onclick="handleLink(false)"
+   <input type="button" onclick="handleLink()"
     name="buttonHome" value="Go to Home">
   </center></td>
   <td width="200"><center><br>
