--- a/File/index.html
+++ b/File/index.html
@@ -38,13 +38,6 @@
  <tr>
   <td width="200"><center>
    <input type="button"
-    value="City Mtn View"
-    onclick="handleChoice('City Mtn View', 
-    'https://mountainview.waterinsight.com/',
-    'plj541@gmail.com', '', '', '')">
-  </center></td>
-  <td width="200"><center>
-   <input type="button"
     value="DMV"
     onclick="handleChoice('DMV', 
     'http://www.dmv.ca.gov/',
@@ -64,8 +57,6 @@
     'https://github.com/plj541/',
     '', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Go Comics"
@@ -73,6 +64,8 @@
     'http://www.gocomics.com/',
     'PLJ541', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Medscape"
@@ -94,8 +87,6 @@
     'https://rexmanor.nextdoor.com/login/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="OSH"
@@ -103,6 +94,8 @@
     'https://cluborchard.osh.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="RedBox"
@@ -124,8 +117,6 @@
     'https://www.samsung.com/us/support/account/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="SIIG VHS Transfer"
@@ -133,6 +124,8 @@
     'https://www.siig.com/customer/account/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Tumblr"
@@ -152,6 +145,13 @@
     value="UpToUs"
     onclick="handleChoice('UpToUs', 
     'http://www.uptous.com/',
+    'plj541@gmail.com', '', '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
+    value="WaterInsight Program"
+    onclick="handleChoice('WaterInsight Program', 
+    'https://mountainview.waterinsight.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
  </tr>
@@ -297,7 +297,7 @@
  </tr>
  <tr>
   <td width="200"><center>
-   <div style="background-color:LemonChiffon">¡Know</div>
+   <div style="background-color:LemonChiffon">Â¡Know</div>
   </center></td>
   <td width="200"><center>
    <input type="button"
