--- a/File/index.html
+++ b/File/index.html
@@ -297,7 +297,7 @@
  </tr>
  <tr>
   <td width="200"><center>
-   <div style="background-color:LemonChiffon">Â¡Know</div>
+   <div style="background-color:LemonChiffon">¡Know</div>
   </center></td>
   <td width="200"><center>
    <input type="button"
