Add true and false to link buttons

--- a/File/index.html
+++ b/File/index.html
@@ -340,7 +340,7 @@
     onfocus="handleFocus(thisPLJ)" />
   </center></td>
   <td width="200"><center><br>
-   <input type="button" onclick="handleLink()"
+   <input type="button" onclick="handleLink(true)"
     name="buttonLink" value=" T.B.D. ">
   </center></td>
   <td width="200"><center><br>
@@ -356,7 +356,7 @@
     onfocus="handleFocus(thisKRJ)" />
   </center></td>
   <td width="200"><center><br>
-   <input type="button" onclick="handleLink()"
+   <input type="button" onclick="handleLink(false)"
     name="buttonHome" value="Go to Home">
   </center></td>
   <td width="200"><center><br>
