Add Patient Advocate Foundation

--- a/File/index.html
+++ b/File/index.html
@@ -240,11 +240,20 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="Patient Advocate Foundation"
+    onclick="handleChoice('Patient Advocate Foundation', 
+    'https://www.copays.org',
+    '', 'bfj636@gmail.com', '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="PBE Secure eMail"
     onclick="handleChoice('PBE Secure eMail', 
     'https://securemail5.messagelabs.com/login.html',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="PG&E"
@@ -252,8 +261,6 @@
     'https://www.pge.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="JCPenney"
@@ -275,6 +282,8 @@
     'https://myhealth.stanfordmedicine.org/',
     'paul.l.jackson@comcast.net', 'bfj22@comcast.net', '', 'rajackson822@gmail.com')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="State Farm Insurance"
@@ -282,8 +291,6 @@
     'http://www.statefarm.com/',
     'plj541', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="VerizonCell Phones"
@@ -291,7 +298,6 @@
     'https://login.verizonwireless.com/amserver/UI/Login',
     'PaulLJackson', '', '', '')">
   </center></td>
-  <td width="200"></td>
   <td width="200"></td>
   <td width="200"></td>
  </tr>
