--- a/File/index.html
+++ b/File/index.html
@@ -196,7 +196,7 @@
     value="Blue Shield CA"
     onclick="handleChoice('Blue Shield CA', 
     'https://www.blueshieldca.com/',
-    '', '', 'RobertAJackson', 'KayteRJackson')">
+    '', '', 'KayteRJackson', 'RobertAJackson')">
   </center></td>
  </tr>
  <tr>
