--- a/File/index.html
+++ b/File/index.html
@@ -253,13 +253,20 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="PAY Pal"
+    onclick="handleChoice('PAY Pal', 
+    'https://www.paypal.com/',
+    'plj541@gmail.com', '', '', '')">
+  </center></td>
+ </tr>
+ <tr>
+  <td width="200"><center>
+   <input type="button"
     value="PBE Secure eMail"
     onclick="handleChoice('PBE Secure eMail', 
     'https://securemail5.messagelabs.com/login.html',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="PG&E"
@@ -281,6 +288,8 @@
     'https://www.sccassessor.org/index.php/online-services/email-opt-in/manage-your-account',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="State Farm Insurance"
@@ -288,8 +297,6 @@
     'http://www.statefarm.com/',
     'plj541', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="VerizonCell Phones"
@@ -297,7 +304,6 @@
     'https://login.verizonwireless.com/amserver/UI/Login',
     'PaulLJackson', '', '', '')">
   </center></td>
-  <td width="200"></td>
   <td width="200"></td>
   <td width="200"></td>
  </tr>
