--- a/File/index.html
+++ b/File/index.html
@@ -131,7 +131,7 @@
     value="Stanford MyHealth"
     onclick="handleChoice('Stanford MyHealth', 
     'https://myhealth.stanfordmedicine.org/',
-    'paul.l.jackson@comcast.net', 'bfj22@comcast.net', '', 'rajackson822@gmail.com')">
+    'paul.l.jackson@comcast.net', 'bfj22@comcast.net', 'kayte.r.jackson@comcast.net', 'rajackson822@gmail.com')">
   </center></td>
   <td width="200"><center>
    <input type="button"
