--- a/File/index.html
+++ b/File/index.html
@@ -320,8 +320,8 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
-    value="MedIcaRe.Gov"
-    onclick="handleChoice('MedIcaRe.Gov', 
+    value="Medicare.GOV"
+    onclick="handleChoice('Medicare.GOV', 
     'https://www.mymedicare.gov/',
     'plj541@gmail.com', 'BARBARAFJACKSON', '', '')">
   </center></td>
