--- a/File/index.html
+++ b/File/index.html
@@ -128,8 +128,8 @@
  <tr>
   <td width="200"><center>
    <input type="button"
-    value="Stanford MyHealth"
-    onclick="handleChoice('Stanford MyHealth', 
+    value="Stanford MyHealth#"
+    onclick="handleChoice('Stanford MyHealth#', 
     'https://myhealth.stanfordmedicine.org/',
     'paul.l.jackson@comcast.net', 'bfj22@comcast.net', 'kayte.r.jackson@comcast.net', 'rajackson822@gmail.com')">
   </center></td>
@@ -234,7 +234,7 @@
    <input type="button"
     value="Medicare Rx AARP"
     onclick="handleChoice('Medicare Rx AARP', 
-    'https://www.aarpmedicareplans.com/aarp-members/sign-in',
+    'http://click.mail.aarpmedicareplans.com/?qs=a9a36c2751bfdbf09e5e3c7da77610c9dcd553e64ecafdb4f5e756c872040f39b8fef69a6b613143f194c81d7ec508ea705348118b9e5b516dc4a2b967c6a652',
     'plj541@gmail.com', 'bfj636@gmail.com', '', '')">
   </center></td>
   <td width="200"><center>
