--- a/File/index.html
+++ b/File/index.html
@@ -232,13 +232,6 @@
  <tr>
   <td width="200"><center>
    <input type="button"
-    value="Medicare Rx AARP"
-    onclick="handleChoice('Medicare Rx AARP', 
-    'http://click.mail.aarpmedicareplans.com/?qs=a9a36c2751bfdbf09e5e3c7da77610c9dcd553e64ecafdb4f5e756c872040f39b8fef69a6b613143f194c81d7ec508ea705348118b9e5b516dc4a2b967c6a652',
-    'plj541@gmail.com', 'bfj636@gmail.com', '', '')">
-  </center></td>
-  <td width="200"><center>
-   <input type="button"
     value="OptumRX"
     onclick="handleChoice('OptumRX', 
     'https://www.optumrx.com/RxSolWeb/mvc/home.do',
@@ -258,8 +251,6 @@
     'https://www.paypal.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="PBE Secure eMail"
@@ -267,6 +258,8 @@
     'https://securemail5.messagelabs.com/login.html',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="PG&E"
@@ -288,8 +281,6 @@
     'https://www.sccassessor.org/index.php/online-services/email-opt-in/manage-your-account',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="State Farm Insurance"
@@ -297,6 +288,8 @@
     'http://www.statefarm.com/',
     'plj541', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="VerizonCell Phones"
@@ -304,6 +297,7 @@
     'https://login.verizonwireless.com/amserver/UI/Login',
     'PaulLJackson', '', '', '')">
   </center></td>
+  <td width="200"></td>
   <td width="200"></td>
   <td width="200"></td>
  </tr>
@@ -336,12 +330,18 @@
  <tr>
   <td width="200"><center>
    <input type="button"
+    value="United Healthcare AARP"
+    onclick="handleChoice('United Healthcare AARP', 
+    'https://member.aarpmedicareplans.com/login.html',
+    'plj541@gmail.com', 'bfj636@gmail.com', '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="Wells Fargo"
     onclick="handleChoice('Wells Fargo', 
     'https://www.wellsfargo.com/',
     'jack50ntr41', '', '', '')">
   </center></td>
-  <td width="200"></td>
   <td width="200"></td>
   <td width="200"></td>
  </tr>
