--- a/File/index.html
+++ b/File/index.html
@@ -15,6 +15,13 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="AARP"
+    onclick="handleChoice('AARP', 
+    'http://www.aarp.org/',
+    'plj541@gmail.com', '', '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="ACER"
     onclick="handleChoice('ACER', 
     'http://us.acer.com/ac/en/US/content/support/',
@@ -27,6 +34,8 @@
     'http://myacm.acm.org/',
     'pauljackson2', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Ancestry"
@@ -34,8 +43,6 @@
     'http://www.ancestry.com/',
     'plj541', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="DMV"
@@ -57,6 +64,8 @@
     'https://github.com/plj541/',
     '', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Go Comics"
@@ -64,8 +73,6 @@
     'http://www.gocomics.com/',
     'PLJ541', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Medscape"
@@ -87,6 +94,8 @@
     'https://rexmanor.nextdoor.com/login/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="OSH"
@@ -94,8 +103,6 @@
     'https://cluborchard.osh.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="RedBox"
@@ -117,6 +124,8 @@
     'https://www.samsung.com/us/support/account/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="SIIG VHS Transfer"
@@ -124,8 +133,6 @@
     'https://www.siig.com/customer/account/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Stanford MyHealth#"
@@ -147,6 +154,8 @@
     'https://twitter.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="UpToUs"
@@ -154,8 +163,6 @@
     'http://www.uptous.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="WaterInsight Program"
@@ -170,7 +177,6 @@
     'http://www.yahoo.com/',
     'plj541', '', '', '')">
   </center></td>
-  <td width="200"></td>
   <td width="200"></td>
  </tr>
  <tr>
