--- a/File/index.html
+++ b/File/index.html
@@ -18,7 +18,7 @@
     value="AARP"
     onclick="handleChoice('AARP', 
     'http://www.aarp.org/',
-    'plj541@gmail.com', '', '', '')">
+    'plj541@gmail.com', 'bfj636@gmail.com', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
