--- a/File/index.html
+++ b/File/index.html
@@ -320,8 +320,8 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
-    value="Medicare.Gov#"
-    onclick="handleChoice('Medicare.Gov#', 
+    value="Medicare.Gov##"
+    onclick="handleChoice('Medicare.Gov##', 
     'https://www.mymedicare.gov/',
     'plj541@gmail.com', 'BARBARAFJACKSON', '', '')">
   </center></td>
