Use Launch for local apps

--- a/File/index.html
+++ b/File/index.html
@@ -135,8 +135,15 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
-    value="Stanford MyHealth#"
-    onclick="handleChoice('Stanford MyHealth#', 
+    value="Skype#"
+    onclick="handleChoice('Skype#', 
+    'file:///sdcard/My Documents/Jay/my/groups/Launch.html?Skype',
+    'plj541@gmail.com', '', '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
+    value="Stanford MyHealth##"
+    onclick="handleChoice('Stanford MyHealth##', 
     'https://myhealth.stanfordmedicine.org/',
     'paul.l.jackson@comcast.net', 'bfj22@comcast.net', 'kayte.r.jackson@comcast.net', 'rajackson822@gmail.com')">
   </center></td>
@@ -147,6 +154,8 @@
     'http://www.tumblr.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Twitter"
@@ -154,8 +163,6 @@
     'https://twitter.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="UpToUs"
@@ -177,7 +184,6 @@
     'http://www.yahoo.com/',
     'plj541', '', '', '')">
   </center></td>
-  <td width="200"></td>
  </tr>
  <tr>
   <td width="200"><center>
