Add Quora, NYTimes and Washington Post

--- a/File/index.html
+++ b/File/index.html
@@ -98,9 +98,23 @@
  <tr>
   <td width="200"><center>
    <input type="button"
+    value="NYTimes"
+    onclick="handleChoice('NYTimes', 
+    'https://www.nytimes.com/',
+    'plj541@gmail.com', '', '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="OSH"
     onclick="handleChoice('OSH', 
     'https://cluborchard.osh.com/',
+    'plj541@gmail.com', '', '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
+    value="Quora Digest"
+    onclick="handleChoice('Quora Digest', 
+    'https://www.quora.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
   <td width="200"><center>
@@ -110,6 +124,8 @@
     'http://www.redbox.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Safeway Coupons"
@@ -124,8 +140,6 @@
     'https://www.samsung.com/us/support/account/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="SIIG VHS Transfer"
@@ -140,6 +154,8 @@
     'file:///sdcard/My Documents/Jay/my/groups/Launch.html?Skype',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Stanford MyHealth##"
@@ -154,8 +170,6 @@
     'http://www.tumblr.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Twitter"
@@ -170,6 +184,8 @@
     'http://www.uptous.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="WaterInsight Program"
@@ -179,11 +195,19 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="Washington Post"
+    onclick="handleChoice('Washington Post', 
+    'https://www.washingtonpost.com',
+    'plj541@gmail.com', '', '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="YaHoo"
     onclick="handleChoice('YaHoo', 
     'http://www.yahoo.com/',
     'plj541', '', '', '')">
   </center></td>
+  <td width="200"></td>
  </tr>
  <tr>
   <td width="200"><center>
