--- a/File/index.html
+++ b/File/index.html
@@ -368,11 +368,20 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="H&amp;R Block"
+    onclick="handleChoice('H&amp;R Block', 
+    'https://taxes.hrblock.com/',
+    'tex541', '', 'rose4891', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="United Healthcare AARP"
     onclick="handleChoice('United Healthcare AARP', 
     'https://member.aarpmedicareplans.com/login.html',
     'plj541@gmail.com', 'bfj636@gmail.com', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Wells Fargo"
@@ -380,6 +389,9 @@
     'https://www.wellsfargo.com/',
     'jack50ntr41', '', '', '')">
   </center></td>
+  <td width="200"></td>
+  <td width="200"></td>
+  <td width="200"></td>
  </tr>
  <tr>
   <td width="200"><center><br>
