--- a/File/index.html
+++ b/File/index.html
@@ -158,8 +158,8 @@
  <tr>
   <td width="200"><center>
    <input type="button"
-    value="Stanford MyHealth##"
-    onclick="handleChoice('Stanford MyHealth##', 
+    value="Stanford MyHealth"
+    onclick="handleChoice('Stanford MyHealth', 
     'https://myhealth.stanfordmedicine.org/',
     'paul.l.jackson@comcast.net', 'bfj22@comcast.net', 'kayte.r.jackson@comcast.net', 'rajackson822@gmail.com')">
   </center></td>
@@ -331,6 +331,13 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="H&amp;R Block"
+    onclick="handleChoice('H&amp;R Block', 
+    'https://taxes.hrblock.com/',
+    'tex541', '', 'rose4891', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="John Hancock Annuities"
     onclick="handleChoice('John Hancock Annuities', 
     'https://www.jhannuities.com/Marketing/default.aspx',
@@ -343,6 +350,8 @@
     'https://www.mymedicare.gov/',
     'plj541@gmail.com', 'BARBARAFJACKSON', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Social Security Admin"
@@ -350,8 +359,6 @@
     'https://secure.ssa.gov/RIL',
     'peaceLoveJoy', 'bootsFrederick', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="State Farm Insurance"
@@ -365,13 +372,6 @@
     onclick="handleChoice('TurboTax Online', 
     'https://turbotax.intuit.com/',
     'pablo5491', '', 'rose4891', '')">
-  </center></td>
-  <td width="200"><center>
-   <input type="button"
-    value="H&amp;R Block"
-    onclick="handleChoice('H&amp;R Block', 
-    'https://taxes.hrblock.com/',
-    'tex541', '', 'rose4891', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
