--- a/File/index.html
+++ b/File/index.html
@@ -345,8 +345,8 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
-    value="Medicare.Gov##"
-    onclick="handleChoice('Medicare.Gov##', 
+    value="MyMedicare.Gov"
+    onclick="handleChoice('MyMedicare.Gov', 
     'https://www.mymedicare.gov/',
     'plj541@gmail.com', 'BARBARAFJACKSON', '', '')">
   </center></td>
