--- a/File/index.html
+++ b/File/index.html
@@ -18,7 +18,7 @@
     value="AARP"
     onclick="handleChoice('AARP', 
     'http://www.aarp.org/',
-    'plj541@gmail.com', 'bfj636@gmail.com', '', '')">
+    'plj541@gmail.comc', 'bfj636@gmail.com', '', '')">
   </center></td>
   <td width="200"><center>
    <input type="button"
@@ -75,6 +75,13 @@
   </center></td>
   <td width="200"><center>
    <input type="button"
+    value="KQED"
+    onclick="handleChoice('KQED', 
+    'http://www.kqed.com/',
+    'plj541@gmail.com', '', '', '')">
+  </center></td>
+  <td width="200"><center>
+   <input type="button"
     value="Medscape"
     onclick="handleChoice('Medscape', 
     'http://www.medscape.com/',
@@ -87,6 +94,8 @@
     'http://www.nars2000.org/',
     'PaulJackson', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="NextDoor"
@@ -94,8 +103,6 @@
     'https://rexmanor.nextdoor.com/login/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="NYTimes"
@@ -117,6 +124,8 @@
     'https://www.quora.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="RedBox"
@@ -124,8 +133,6 @@
     'http://www.redbox.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Safeway Coupons"
@@ -147,6 +154,8 @@
     'https://www.siig.com/customer/account/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="Skype#"
@@ -154,8 +163,6 @@
     'file:///sdcard/My Documents/Jay/my/groups/Launch.html?Skype',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="Stanford MyHealth"
@@ -177,6 +184,8 @@
     'https://twitter.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
+ </tr>
+ <tr>
   <td width="200"><center>
    <input type="button"
     value="UpToUs"
@@ -184,8 +193,6 @@
     'http://www.uptous.com/',
     'plj541@gmail.com', '', '', '')">
   </center></td>
- </tr>
- <tr>
   <td width="200"><center>
    <input type="button"
     value="WaterInsight Program"
@@ -207,7 +214,6 @@
     'http://www.yahoo.com/',
     'plj541', '', '', '')">
   </center></td>
-  <td width="200"></td>
  </tr>
  <tr>
   <td width="200"><center>
